bitfields/tests/compile_error_cases/bitfield_field_float64_identifier_default_value.stderr
error: Floats are not supported as default values.
 --> tests/compile_error_cases/bitfield_field_float64_identifier_default_value.rs:9:22
  |
9 |     #[bits(default = 0f64)]
  |                      ^^^^
